# app/Models/Pet.php
@@ -12,7 +12,7 @@ use App\Models\User;
 class Pet extends Model
 {
     use HasFactory;
-    protected $visible = ['id', 'name', 'tags', 'category', 'photoUrls', 'status', 'owner'];
+    protected $visible = ['id','name', 'tags', 'category', 'photoUrls', 'status', 'owner'];
     protected $fillable = ['name', 'user_id', 'category_id', 'status'];
 
     public function tags()
